# FaceLandmarkAlpha

./: CMakeLists.txt  README.md  connection-test.txt  connection.txt  symmetry.txt
inc/: face_annotations.h  shape_model.h
src/: face_annotations.cpp  main.cpp  shape_model.cpp
